# lib/api-spec/openapi.yaml
@@ -917,6 +917,12 @@ paths:
           in: query
           schema:
             type: integer
+        - name: month
+          in: query
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 12
         - name: departmentId
           in: query
           schema:
